...
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_notification_item"
                android:padding="8dp">


                <ImageView
                    android:id="@+id/img_event"
                    android:layout_width="0dp"
                    android:layout_height="168dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sample_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
...
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toEndOf="@id/tv_date"
                    app:layout_constraintTop_toBottomOf="@id/tv_event_name">

                    <TextView
                        android:id="@+id/tv_startTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="LOADING..."
...
                    android:text="View QR Code"
                    android:backgroundTint="@color/purpleText"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp" />

                <Button
                    android:id="@+id/btn_waiting_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="View Waiting List"
                    android:backgroundTint="@color/purpleText"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp" />
...
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/purpleText"
                    android:text="View Cancelled Entrants"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btn_finalist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/purpleText"
                    android:text="View Final List"
                    android:textColor="@color/black" />
                <Button
                    android:id="@+id/btn_export_csv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purpleText"
                    android:textColor="@color/black"
                    android:text="Export Final List (CSV)" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


...
